extends ScrollContainer

func _on_LeftArrow_pressed():
	pass # Replace with function body.


func _on_RightArrow_pressed():
	pass # Replace with function body.


func _on_UpArrow_pressed():
	pass # Replace with function body.


func _on_DownArrow_pressed():
	pass # Replace with function body.


func _on_rotateleft_pressed():
	pass # Replace with function body.


func _on_rotateright_pressed():
	pass # Replace with function body.
